Wed Aug 15 21:54:11 UTC 2007  Steve Huston  <shuston@riverace.com>

        * tests/New_Fail_Test.cpp: Allocate the hugest blocks we can instead
          of many merely big ones. Helps the test run without dragging the
          system to a crawl, at least on my WinXP VC7.1 box w/ 1GB memory.
          YMMV. Not ready to re-enable in tests/run_test.lst until a few
          other people try this out by hand.
          Also, replace ACE_ASSERT with if/else and ACE_ERROR.

Wed Aug 15 15:56:12 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * performance-tests/Misc/test_mutex.cpp:
        * performance-tests/Misc/test_singleton.cpp:
        * performance-tests/SCTP/Options_Manager.cpp:
        * performance-tests/Synch-Benchmarks/Perf_Test/condb_test.cpp:
        * performance-tests/Synch-Benchmarks/Perf_Test/conds_test.cpp:
        * performance-tests/Synch-Benchmarks/Perf_Test/memory_test.cpp:
        * performance-tests/Synch-Benchmarks/context.c:
        * performance-tests/Synch-Benchmarks/synch_driver.cpp:
        * performance-tests/TTCP/ACE-C++/wrapper-new-ttcp.cpp:
        * performance-tests/TTCP/C/new-ttcp.cpp:

          Untabify.

        * bin/fuzz.pl:

          Remove performance-tests directory from the list of excluded 
          directories for the tabs check.

Wed Aug 15 14:57:06 UTC 2007  Steve Huston  <shuston@riverace.com>

        * m4/platform.m4: Check for NPTL on Linux. Fixes Bugzilla 3044.

        * protocols/tests/HTBP/Send_Recv_Tests/Makefile.am: Corrected
          multi-test syntax.

Wed Aug 15 14:55:36 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * tests/ACE_Init_Test.h:
        * tests/ACE_Init_Test_Resource.h:
        * tests/ACE_Init_Test_StdAfx.h:
        * tests/Map_Test.cpp:
        * tests/OS_Test.cpp:
        * tests/QtReactor_Test.cpp:
        * tests/TP_Reactor_Test.h:
        * tests/Thread_Pool_Reactor_Resume_Test.cpp:

          Untabify

        * bin/fuzz.pl:
